[workspace]
resolver = "2"

members = [
    "fuzz",
    "rart",
]

[workspace.package]
version = "0.1.1"
authors = ["Ryan Daum <ryan.daum@gmail.com>"]
edition = "2024"
homepage = "https://github.com/rdaum/rart-rs"
license = "Apache-2.0"
repository = "https://github.com/rdaum/rart-rs"

[workspace.dependencies]
# Core dependencies
num-traits = "0.2"
simdeez = "2.0.0-dev5"

# Dev dependencies
criterion = { version = "0.7", features = ["html_reports"] }
im = "15.1"
rand = "0.9"
shuttle = "0.7"

# Fuzz dependencies
arbitrary = { version = "1.4", features = ["derive"] }
libfuzzer-sys = "0.4"
