[workspace]
resolver = "2"

members = [
    "fuzz",
    "rart",
]

[workspace.package]
version = "0.6.1"
authors = ["Ryan Daum <ryan.daum@gmail.com>"]
edition = "2024"
homepage = "https://github.com/rdaum/rart-rs"
license = "Apache-2.0"
repository = "https://github.com/rdaum/rart-rs"
rust-version = "1.86"

[workspace.dependencies]
# Core dependencies
num-traits = "0.2"
simdeez = "2.0.0"

# Dev dependencies
blart = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
imbl = "7.0.0"
micromeasure = "0.6"
proptest = "1.6"
rand = "0.9"
shuttle = "0.8"
triomphe = "0.1"

# Fuzz dependencies
arbitrary = { version = "1.4", features = ["derive"] }
libfuzzer-sys = "0.4"
