[package]
name = "rart"
description = "Ryan's Adaptive Radix Tree"
authors = ["Ryan Daum <ryan.daum@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rdaum/rart-rs"
repository = "https://github.com/rdaum/rart-rs"
keywords = ["datastructure", "tree", "radix", "index"]
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.3.1"
paste = "1.0.12"

rand = "0.8"
csv="1.2.1"

[features]
default = ["simd_keys"]
simd_keys = ["dep:simdeez"]

[dependencies]
num-traits = "0.2.15"
simdeez = { version = "2.0.0-dev3", optional = true }

[[bench]]
name = "art_bench"
harness = false

[[bench]]
name = "art_compare_bench"
harness = false

[[bench]]
name = "node_mapping_microbenches"
harness = false

[[bench]]
name = "art_iai_bench"
harness = false

[[bench]]
name = "node_mapping_iai_microbenches"
harness = false
