[package]
name = "rart"
version.workspace = true
authors.workspace = true
categories = ["data-structures"]
edition.workspace = true
homepage.workspace = true
keywords = ["datastructure", "tree", "radix", "index"]
license.workspace = true
readme = "../README.md"
repository.workspace = true
description = "High-performance Adaptive Radix Tree implementation with SIMD optimizations"

[dev-dependencies]
blart.workspace = true
criterion.workspace = true
im.workspace = true
rand.workspace = true
shuttle.workspace = true

[features]
default = ["simd_keys"]
simd_keys = ["dep:simdeez"]

[dependencies]
num-traits.workspace = true
simdeez = { workspace = true, optional = true }

[[bench]]
name = "art_bench"
harness = false

[[bench]]
name = "art_compare_bench"
harness = false

[[bench]]
name = "node_mapping_microbenches"
harness = false

[[bench]]
name = "versioned_tree_bench"
harness = false

[[bench]]
name = "iter_bench"
harness = false

[[bench]]
name = "prefix_bench"
harness = false

[[bench]]
name = "intersection_join_bench"
harness = false

# Miri test targets for memory safety validation
# Run with: cargo +nightly miri test -p rart --test miri_mapping_tests --no-default-features
[[test]]
name = "miri_mapping_tests"
path = "tests/miri_mapping_tests.rs"
